{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 0,
  "lineage": "89511600-1677-0b1e-5529-855f7fd3e98b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08140e53e3be1adf7",
            "domain": "vpc",
            "id": "eipalloc-08140e53e3be1adf7",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-233-56-215.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.56.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Durianpay_NatgatewayEIP",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "Durianpay_NatgatewayEIP",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774770074093:internet-gateway/igw-0e5f1c4352dab23e1",
            "id": "igw-0e5f1c4352dab23e1",
            "owner_id": "774770074093",
            "tags": {
              "Name": "Durianpay_IGW",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "Durianpay_IGW",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "vpc_id": "vpc-05e903e1bfba8a43f"
          },
          "dependencies": [
            "aws_vpc.durian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08140e53e3be1adf7",
            "connectivity_type": "public",
            "id": "nat-06fd06ea4e47b5f38",
            "network_interface_id": "eni-07f13ba843cc9b090",
            "private_ip": "10.0.1.64",
            "public_ip": "13.233.56.215",
            "subnet_id": "subnet-01ecf914eadcc806f",
            "tags": {
              "Name": "Durianpay_Natgateway",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "Durianpay_Natgateway",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.durian-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "durian-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774770074093:route-table/rtb-057e69123dbbe4e73",
            "id": "rtb-057e69123dbbe4e73",
            "owner_id": "774770074093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06fd06ea4e47b5f38",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Durianpay_Private_Route_Table",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "Durianpay_Private_Route_Table",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e903e1bfba8a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NatGateway",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.durian-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "durian-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774770074093:route-table/rtb-00726c56206382ddd",
            "id": "rtb-00726c56206382ddd",
            "owner_id": "774770074093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5f1c4352dab23e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Durianpay_Public_Route_Table",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "Durianpay_Public_Route_Table",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e903e1bfba8a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.durian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a082629cea564563",
            "route_table_id": "rtb-057e69123dbbe4e73",
            "subnet_id": "subnet-02edd6b2ffd70382a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NatGateway",
            "aws_route_table.durian-private-route-table",
            "aws_subnet.private-ap-south-1a",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.durian-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad256525d4f41bf9",
            "route_table_id": "rtb-00726c56206382ddd",
            "subnet_id": "subnet-01ecf914eadcc806f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.durian-public-route-table",
            "aws_subnet.public-ap-south-1a",
            "aws_vpc.durian-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "durianpay_asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774770074093:security-group/sg-02e57f61aa22e66c0",
            "description": "Allow SSH into EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e57f61aa22e66c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from Personal CIDR block",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Durianpay-ASG-SG",
            "name_prefix": "",
            "owner_id": "774770074093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Durianpay-ASG-SG",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "Durianpay-ASG-SG",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e903e1bfba8a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.durian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774770074093:subnet/subnet-02edd6b2ffd70382a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02edd6b2ffd70382a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774770074093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-ap-south-1a",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "private-ap-south-1a",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "vpc_id": "vpc-05e903e1bfba8a43f"
          },
          "dependencies": [
            "aws_vpc.durian-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774770074093:subnet/subnet-01ecf914eadcc806f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ecf914eadcc806f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774770074093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-south-1a",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "public-ap-south-1a",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "vpc_id": "vpc-05e903e1bfba8a43f"
          },
          "dependencies": [
            "aws_vpc.durian-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "durian-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774770074093:vpc/vpc-05e903e1bfba8a43f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077703872dc05469c",
            "default_route_table_id": "rtb-0a84c601e8bcfc655",
            "default_security_group_id": "sg-00e6b20c78b62e41e",
            "dhcp_options_id": "dopt-07edc0334ce7137e3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05e903e1bfba8a43f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a84c601e8bcfc655",
            "owner_id": "774770074093",
            "tags": {
              "Name": "Durianpay_vpc",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            },
            "tags_all": {
              "Name": "Durianpay_vpc",
              "company": "Durianpay",
              "created_by": "Narshing",
              "owner": "terraform"
            }
          }
        }
      ]
    }
  ]
}